--- a/style.css
+++ b/style.css
@@ -1,3 +1,21 @@
+body {
+    position: relative;
+}
+
 .strike {
     text-decoration: line-through;
+}
+
+#warning-overlay {
+    display: none;
+    position: fixed;
+    background-color: rgba(0,0,0,0.8);
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
 }
